--- a/evoks/theme/templates/reset_password1.html
+++ b/evoks/theme/templates/reset_password1.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Log in</title>
+    <title>Reset password</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -20,13 +20,10 @@
             <div>
                 <img class="mx-auto h-12 w-auto" src="http://localhost:8000/static/assets/logo.png" alt="Workflow">
                 <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
-                    Sign in to your account
+                    Forgot Password
                 </h2>
                 <p class="mt-2 text-center text-sm text-gray-600">
-                    or
-                    <a href="/signup" class="font-medium text-regal-blue hover:text-gray-500">
-                        create account
-                    </a>
+                    Enter your email to reset your password
                 </p>
             </div>
             <form class="mt-8 space-y-6" action="#" method="POST">
@@ -35,22 +32,10 @@
                     <div>
                         <label for="email-address" class="sr-only">Email address</label>
                         <input id="email-address" name="email" type="email" autocomplete="email" required
-                            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-gray-500 focus:border-gray-500 focus:z-10 sm:text-sm"
+                            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-gray-500 focus:border-gray-500 focus:z-10 sm:text-sm"
                             placeholder="Email address">
                     </div>
-                    <div>
-                        <label for="password" class="sr-only">Password</label>
-                        <input id="password" name="password" type="password" autocomplete="current-password" required
-                            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-gray-500 focus:border-gray-500 focus:z-10 sm:text-sm"
-                            placeholder="Password">
-                    </div>
                 </div>
-
-                <p class="mt-2 text-right text-sm text-gray-600">
-                    <a href="reset_password" class="font-medium text-regal-blue hover:text-gray-500">
-                        Forgot your password? 
-                    </a>
-                </p>
 
                 <div>
                     <button type="submit"
@@ -64,13 +49,10 @@
                                     clip-rule="evenodd" />
                             </svg>
                         </span>
-                        Sign in
+                        Send Email
                     </button>
                 </div>
             </form>
-            <p class="text-center italic">brought to you by</p>
-            <img class="mx-auto h-12 w-auto" src="http://localhost:8000/static/assets/epi.png" alt="Workflow">
-
         </div>
     </div>
 
