--- a/evoks/theme/templates/signup.html
+++ b/evoks/theme/templates/signup.html
@@ -11,6 +11,8 @@
 
 </head>
 
+<form action="#" method="post"> {% csrf_token %}
+
 <body>
 
     <div class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
@@ -27,7 +29,7 @@
                     </a>
                 </p>
             </div>
-            <form class="mt-8 space-y-6" action="#" method="POST"> {% csrf_token %}
+            <form class="mt-8 space-y-6" action="#" method="POST">
                 <input type="hidden" name="remember" value="true">
                 <div class="rounded-md shadow-sm -space-y-px">
                     <div>
