--- a/evoks/theme/templates/term_detail.html
+++ b/evoks/theme/templates/term_detail.html
@@ -200,11 +200,14 @@
 
                                         </span>
                                         <span class="ml-4 flex-shrink-0">
-
+                                            {% load guardian_tags %}
+                                            {% get_obj_perms user for vocabulary as "vocabulary_perms" %}
+                                            {% if "owner" in vocabulary_perms %}  
                                             <button id="delete-term-button"
                                                 class="inline-flex items-center px-3 py-2 font-medium rounded px-4 py-2 leading-5 bg-red-500 text-primary-100 text-white hover:text-white focus:ring-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2">
                                                 Delete Term
                                             </button>
+                                            {% endif%}
                                         </span>
                                     </dd>
                                 </dl>
