--- a/evoks/theme/templates/reset_password_sent.html
+++ b/evoks/theme/templates/reset_password_sent.html
@@ -10,13 +10,14 @@
     {% tailwind_css %}
 
 </head>
+{% load static %}
 
 <body>
 
     <div class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
         <div class="max-w-md w-full space-y-8">
             <div>
-                <img class="mx-auto h-12 w-auto" src="http://localhost:8000/static/assets/logo.png" alt="Workflow">
+                <img class="mx-auto h-12 w-auto" src="{% static 'assets/logo.png' %}" alt="Evoks">
                 <p class="mt-2 text-center text-sm text-gray-600">
                     We've emailed you instructions for setting your password, if an account exists with the email you
                     entered.
