--- a/evoks/theme/templates/login.html
+++ b/evoks/theme/templates/login.html
@@ -10,15 +10,16 @@
     {% tailwind_css %}
 
 </head>
-
+{% load static %}
 <form action="#" method="post"> {% csrf_token %}
+
 
 <body>
 
     <div class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
         <div class="max-w-md w-full space-y-8">
             <div>
-                <img class="mx-auto h-12 w-auto" src="http://localhost:8000/static/assets/logo.png" alt="Workflow">
+                <img class="mx-auto h-12 w-auto" src="{% static 'assets/logo.png' %}" alt="Evoks">
                 <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
                     Sign in to your account
                 </h2>
@@ -69,7 +70,7 @@
                 </div>
             </form>
             <p class="text-center italic">brought to you by</p>
-            <img class="mx-auto h-12 w-auto" src="http://localhost:8000/static/assets/epi.png" alt="Workflow">
+            <img class="mx-auto h-12 w-auto" src="{% static 'assets/epi.png' %}" alt="Evoks">
 
         </div>
     </div>
