--- a/evoks/theme/templates/modals/create_term.html
+++ b/evoks/theme/templates/modals/create_term.html
@@ -1,5 +1,5 @@
 <!-- should post to term list of corresponding vocabulary-->
-<form action="#" method="post" enctype="multipart/form-data">
+<form action=""" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="fixed z-50 inset-0 overflow-y-auto invisible" aria-labelledby="modal-title" role="dialog"
         id="create-term-modal" aria-modal="true">
@@ -18,7 +18,7 @@
                         </h3>
                         <div class="mt-2">
                             <p class="text-sm text-gray-500">
-                                Enter a term name and create one from scratch!
+                                Enter a term name and label and create one from scratch!
                             </p>
                         </div>
 
@@ -32,10 +32,19 @@
                                             <div class="mt-1">
                                                 <input type="text" name="term-name" id="text"
                                                     class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
-                                                    placeholder="cooles_vokabular123">
+                                                    placeholder="term123">
                                             </div>
                                         </div>
-
+                                        <div>
+                                            <label for="term-label"
+                                                class="block text-sm font-medium text-gray-700">skos:prefLabel
+                                            </label>
+                                            <div>
+                                                <input type="text" name="term-label" id="text"
+                                                    class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
+                                                    placeholder="Term Beschreibung">
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
