--- a/evoks/theme/templates/sidebars/desktop.html
+++ b/evoks/theme/templates/sidebars/desktop.html
@@ -1,9 +1,11 @@
+{% load static %}
+
 <div class="hidden md:flex md:flex-shrink-0">
     <div class="w-64 flex flex-col">
         <!-- Sidebar component, swap this element with another sidebar if you like -->
         <div class="border-r border-gray-200 pt-5 pb-4 flex flex-col flex-grow overflow-y-auto">
             <div class="flex-shrink-0 px-4 flex items-center">
-                <img class="h-12 w-auto" src="http://localhost:8000/static/assets/logo.png" alt="Workflow">
+                <img class="h-12 w-auto" src="{% static 'assets/logo.png' %}" alt="Evoks">
                 <p class="font-medium text-3xl">evoks</p>
             </div>
             <div class="flex-grow mt-5 flex flex-col">
