--- a/evoks/theme/templates/header/searchbar_globally.html
+++ b/evoks/theme/templates/header/searchbar_globally.html
@@ -31,6 +31,7 @@
                         <select id="location"
                             onchange="window.location = this.value"
                             class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-gray-500 focus:border-gray-500 sm:text-sm rounded-md">
+                            <option disabled selected value> -- select a term -- </option>
                             {% for res in search_results %}
                             <option value="{{res.0}}">{{res.1}}</option>
                             {% endfor %}
