--- a/evoks/theme/templates/modals/create_vocabulary.html
+++ b/evoks/theme/templates/modals/create_vocabulary.html
@@ -68,7 +68,7 @@
                                                             <p class="pl-1">or drag and drop</p>
                                                         </div>
                                                         <p class="text-xs text-gray-500">
-                                                            TTL up to 100MB
+                                                            Supported file formats: JSON-LD,  RDF/XML or TTL up to 100MB
                                                         </p>
                                                     </div>
                                                 </div>
