--- a/evoks/theme/templates/modals/create_vocabulary.html
+++ b/evoks/theme/templates/modals/create_vocabulary.html
@@ -18,7 +18,7 @@
                         </h3>
                         <div class="mt-2">
                             <p class="text-sm text-gray-500">
-                                Enter a vocabulary name and create one from scratch or import an existing vocabulary! Importing a big vocabulary can take some time.
+                                Enter a vocabulary name and create one from scratch or import an existing vocabulary! Importing a big vocabulary can take some time. Maximum length of name is 50 and of Urispace is 100.
                             </p>
                         </div>
 
@@ -29,7 +29,7 @@
                                         <div>
                                             <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
                                             <div class="mt-1">
-                                                <input type="text" name="name" id="text"
+                                                <input type="text" name="name" id="text" maxlength="50" minlength="1"
                                                     class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
                                                     placeholder="">
                                             </div>
@@ -38,7 +38,7 @@
                                         <div>
                                             <label for="urispace" class="block text-sm font-medium text-gray-700">URISpace</label>
                                             <div class="mt-1">
-                                                <input type="text" name="urispace" id="text"
+                                                <input type="text" name="urispace" id="text" maxlength="100"
                                                     class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
                                                     placeholder="">
                                             </div>
