--- a/evoks/theme/templates/modals/create_term.html
+++ b/evoks/theme/templates/modals/create_term.html
@@ -30,7 +30,7 @@
                                             <label for="term-name"
                                                 class="block text-sm font-medium text-gray-700">Name</label>
                                             <div class="mt-1">
-                                                <input type="text" name="term-name" id="text" maxlength="50" minlength="1"
+                                                <input type="text" name="term-name" id="text" maxlength="50" 
                                                     class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
                                                     placeholder="term123">
                                             </div>
