--- a/evoks/theme/templates/team_detail.html
+++ b/evoks/theme/templates/team_detail.html
@@ -176,13 +176,13 @@
                                                                 class="block text-sm font-medium text-gray-700">Invite a
                                                                 member</label>
                                                             <div class="mt-1">
-                                                                <input type="text" name="email" id="email"
+                                                                <input type="text" name="email" id="email" maxlength="254"
                                                                     class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
                                                                     placeholder="ontologyfan@student.kit.edu">
                                                             </div>
                                                         </div>
                                                         <div class="mt-5">
-                                                            <button type="submit" name='invite' 
+                                                            <button type="submit" name='invite'
                                                                 class="inline-flex items-center justify-center px-10 py-2 border border-transparent font-medium rounded-md text-white bg-regal-blue focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm">
                                                                 Invite
                                                             </button>
@@ -205,7 +205,7 @@
                                                                 team
                                                                 description </label>
                                                             <div class="mt-1">
-                                                                <input type="text" name="description" id="description"
+                                                                <input type="text" name="description" id="description" maxlength="500"
                                                                     class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
                                                                     placeholder="{{team.groupprofile.description}}">
                                                             </div>
