maximum länge gefixt

--- a/evoks/theme/templates/help_page.html
+++ b/evoks/theme/templates/help_page.html
@@ -39,7 +39,7 @@
                         </h2>
                         <div class="text-sm text-gray-900">
                             You can find the "Create Vocabulary" button in the left sidebar. You can either import a
-                            vocabulary by uploading an RDF/Turtle file or create a new vocabulary by entering a
+                            vocabulary by uploading an RDF/XML, JSON-LD or TURTLE file or create a new vocabulary by entering a
                             vocabulary name. You can then further edit the vocabulary fields on the vocabulary details
                             page. You can get there by clicking the newly created vocabulary on the Dashboard page.
                         </div>
