--- a/evoks/theme/templates/reset_password.html
+++ b/evoks/theme/templates/reset_password.html
@@ -36,13 +36,13 @@
                             <td>{{ form.new_password1.errors }}
                                 <div class="form-group">
                                     <label for="id_new_password1" class="sr-only">new_password1</label>
-                                    <input id="id_new_password1" name="new_password1" type="password" required
+                                    <input id="id_new_password1" name="new_password1" type="password" required maxlength="50"
                                         class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-gray-500 focus:border-gray-500 focus:z-10 sm:text-sm"
                                         placeholder="Password">
                             <td>{{ form.new_password2.errors }}
                                 <div class="form-group">
                                     <label for="id_new_password2" class="sr-only">new_password2</label>
-                                    <input id="id_new_password2" name="new_password2" type="password" required
+                                    <input id="id_new_password2" name="new_password2" type="password" required maxlength="50"
                                         class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-gray-500 focus:border-gray-500 focus:z-10 sm:text-sm"
                                         placeholder="Confirm Password">
                                 </div>
