--- a/evoks/theme/templates/reset_password1.html
+++ b/evoks/theme/templates/reset_password1.html
@@ -32,7 +32,7 @@
                 <div class="rounded-md shadow-sm -space-y-px">
                     <div>
                         <label for="email-address" class="sr-only">Email address</label>
-                        <input id="email-address" name="email" type="email" autocomplete="email" required
+                        <input id="email-address" name="email" type="email" autocomplete="email" required maxlength="254"
                             class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-gray-500 focus:border-gray-500 focus:z-10 sm:text-sm"
                             placeholder="Email address">
                     </div>
