--- a/evoks/theme/templates/team_detail.html
+++ b/evoks/theme/templates/team_detail.html
@@ -176,7 +176,7 @@
                                                                 class="block text-sm font-medium text-gray-700">Invite a
                                                                 member</label>
                                                             <div class="mt-1">
-                                                                <input type="text" name="email" id="email" maxlength="254"
+                                                                <input type="email" name="email" id="email" maxlength="254"
                                                                     class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
                                                                     placeholder="ontologyfan@student.kit.edu">
                                                             </div>
@@ -203,9 +203,9 @@
                                                             <label for="description"
                                                                 class="block text-sm font-medium text-gray-700">Change
                                                                 team
-                                                                description </label>
+                                                                description (up to 70 characters) </label>
                                                             <div class="mt-1">
-                                                                <input type="text" name="description" id="description" maxlength="500"
+                                                                <input type="text" name="description" id="description" maxlength="70"
                                                                     class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
                                                                     placeholder="{{team.groupprofile.description}}">
                                                             </div>
