--- a/evoks/theme/templates/vocabulary_members.html
+++ b/evoks/theme/templates/vocabulary_members.html
@@ -175,7 +175,7 @@
                                                             class="block text-sm font-medium text-gray-700">Invite a
                                                             member or a group</label>
                                                         <div class="mt-1">
-                                                            <input type="text" name="email" id="email"
+                                                            <input type="text" name="email" id="email" maxlength="254"
                                                                 class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
                                                                 placeholder="ontologyfan@student.kit.edu or KIT Ontologen 2">
                                                         </div>
