--- a/evoks/theme/templates/modals/create_property.html
+++ b/evoks/theme/templates/modals/create_property.html
@@ -23,7 +23,7 @@
                                     <div>
                                         <label for="predicate" class="block text-sm font-medium text-gray-700">Predicate</label>
                                         <div class="mt-1">
-                                            <input type="text" name="predicate" id="text"
+                                            <input type="text" name="predicate" id="text" required
                                                 class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
                                                 placeholder="skosmos:language">
                                         </div>
@@ -41,7 +41,7 @@
                                     <div>
                                         <label for="object" class="block text-sm font-medium text-gray-700">Object</label>
                                         <div class="mt-1">
-                                            <input type="text" name="object" id="text"
+                                            <input type="text" name="object" id="text" required
                                                 class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
                                                 placeholder="en">
                                         </div>
