--- a/evoks/theme/templates/modals/create_tag.html
+++ b/evoks/theme/templates/modals/create_tag.html
@@ -24,7 +24,7 @@
                                     <div>
                                         <label for="tag-name" class="block text-sm font-medium text-gray-700">Name</label>
                                         <div class="mt-1">
-                                            <input type="text" name="tag-name" id="text"
+                                            <input type="text" name="tag-name" id="text" maxlength="100"
                                                 class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
                                                 placeholder="">
                                         </div>
