--- a/evoks/theme/templates/term_detail.html
+++ b/evoks/theme/templates/term_detail.html
@@ -104,7 +104,7 @@
                                     </dt>
                                     <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
                                         <ul class="border border-gray-200 rounded-md divide-y divide-gray-200">
-                                            <form <form action="#" method="post">
+                                            <form action="#" method="post">
                                                 {% csrf_token %}
                                                 <li class="pl-3 pr-4 py-3 flex items-center justify-between text-sm">
                                                     <div class="w-0 flex-1 flex items-center">
@@ -287,7 +287,7 @@
                                                             <form action="#" method="post"> {% csrf_token %}
                                                                 <div>
                                                                     <label for="comment" class="sr-only">Comment</label>
-                                                                    <textarea id="comment" name="comment-text" rows="3"
+                                                                    <textarea id="comment" name="comment-text" rows="3" maxlength="1000"
                                                                         class="shadow-sm block w-full focus:ring-gray-900 focus:border-gray-900 sm:text-sm border border-gray-300 rounded-md"
                                                                         placeholder="Leave a comment"></textarea>
                                                                 </div>
