--- a/evoks/theme/templates/vocabulary_members.html
+++ b/evoks/theme/templates/vocabulary_members.html
@@ -171,9 +171,8 @@
                                             <div class="px-4 py-5 sm:p-6">
                                                 <form action="#" method="post"> {% csrf_token %}
                                                     <div>
-                                                        <label for="email"
-                                                            class="block text-sm font-medium text-gray-700">Invite a
-                                                            member or a group</label>
+                                                        <h3 class="text-lg leading-6 font-medium text-gray-900">Invite a
+                                                            new member or a group</h3>
                                                         <div class="mt-1">
                                                             <input type="text" name="email" id="email" maxlength="254"
                                                                 class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
