--- a/evoks/theme/templates/vocabulary_terms.html
+++ b/evoks/theme/templates/vocabulary_terms.html
@@ -14,6 +14,8 @@
 <body>
     <!-- Create Team Modal -->
     {% include "modals/create_term.html" %}
+    <!-- Create Team Modal -->
+    {% include "modals/create_team.html" %}
     <!-- Create Vocabulary Modal -->
     {% include "modals/create_vocabulary.html" %}
     <!-- Create Vocabulary Modal -->
