--- a/evoks/theme/templates/vocabulary.html
+++ b/evoks/theme/templates/vocabulary.html
@@ -300,7 +300,7 @@
                                                             <form action="#" method="post"> {% csrf_token %}
                                                                 <div>
                                                                     <label for="comment" class="sr-only">Comment</label>
-                                                                    <textarea id="comment" name="comment-text" rows="3"
+                                                                    <textarea id="comment" name="comment-text" rows="3" maxlength="1000"
                                                                         class="shadow-sm block w-full focus:ring-gray-900 focus:border-gray-900 sm:text-sm border border-gray-300 rounded-md"
                                                                         placeholder="Leave a comment"></textarea>
                                                                 </div>
