--- a/evoks/theme/templates/sidebars/desktop.html
+++ b/evoks/theme/templates/sidebars/desktop.html
@@ -38,7 +38,7 @@
                     {%endif%}
 
                     {%if request.path == "/teams"%}
-                    <a href="{% url 'base' %}"
+                    <a href="{% url 'team_list' %}"
                         class="bg-gray-100 text-gray-900 group rounded-md py-2 px-2 flex items-center text-sm font-medium">
                         <svg class="text-gray-500 mr-3 flex-shrink-0 h-6 w-6" xmlns="http://www.w3.org/2000/svg"
                             fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
