--- a/evoks/theme/templates/vocabulary.html
+++ b/evoks/theme/templates/vocabulary.html
@@ -139,7 +139,7 @@
                                                             </span>
                                                         </div>
                                                         <div class="ml-4 flex-shrink-0 flex space-x-4">
-                                                            <button type="submit" name="download" value="rdf/xml"
+                                                            <button type="submit" name="download" value="rdf+xml"
                                                                 class="bg-white rounded-md font-medium text-regal-blue hover:text-regal-blue focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
                                                                 Download
                                                             </button>
@@ -160,7 +160,7 @@
                                                             </span>
                                                         </div>
                                                         <div class="ml-4 flex-shrink-0 flex space-x-4">
-                                                            <button type="submit" name="download" value="json"
+                                                            <button type="submit" name="download" value="json-ld"
                                                                 class="bg-white rounded-md font-medium text-regal-blue hover:text-regal-blue focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
                                                                 Download
                                                             </button>
@@ -181,7 +181,7 @@
                                                             </span>
                                                         </div>
                                                         <div class="ml-4 flex-shrink-0 flex space-x-4">
-                                                            <button type="submit" name="download" value="N3"
+                                                            <button type="submit" name="download" value="turtle"
                                                                 class="bg-white rounded-md font-medium text-regal-blue hover:text-regal-blue focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
                                                                 Download
                                                             </button>
